# regame_crawl

./: .gitignore  README.md  pyproject.toml
.github/workflows/: terraform-apply.yml  terraform-plan.yml
crawl/: main.py  requirements.txt
crawl/models/: notion.py  regame_info.py
terraform/: main.tf  variable.tf
