[tool.poetry]
name = "crawl"
version = "0.1.0"
description = ""
authors = ["Shin Uozumi <sinozu@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests-html = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
